# jukebox

./: .gitignore  API.hs  AppList.hs  BinaryShared.hs  Changing.hs  Clausify.hs  FindFile.hs  Flags.hs  Form.hs  Formula.hs  Graph.hs  GuessModel.hs  HighSat.hs  InferTypes.hs  LICENSE  Lexer.x  Main.hs  Makefile  Map.hs  Monotonicity.hs  Name.hs  NameMap.hs  Options.hs  Parser.hs  Progress.hs  ProgressBar.hs  ReadProblem.hs  Sat.hs  Sat3.hs  SatEq.hs  SatMin.hs  Seq.hs  TODO  TPTP.hs  Toolbox.hs  UnionFind.hs  UniverseTH.hs  Utils.hs  build  gcc-static-minisat  (+6 more)
Data/Derive/: BinaryShared.hs  BinaryUnshared.hs  Hashable.hs
Jukebox/: Clausify.hs  Form.hs  GuessModel.hs  HighSat.hs  Map.hs  Name.hs  NameMap.hs  Options.hs  ProgressBar.hs  Sat.hs  SatMin.hs  Seq.hs  Toolbox.hs  UnionFind.hs  Utils.hs
Jukebox/Monotonox/: Monotonicity.hs  ToFOF.hs
Jukebox/Provers/: E.hs  SPASS.hs
Jukebox/TPTP/: ClauseParser.hs  FindFile.hs  Lexer.x  ParseProblem.hs  ParseSnippet.hs  Parsec.hs  Print.hs
Monotonox/: Monotonicity.hs  Sat.hs  ToFOF.hs
ParadoxParser/: .#PrintForm.hs  Convert.hs  Flags.hs  Form.hs  Name.hs  ParseProblem.hs  Parsek.hs  Str.hs  Test.hs
Provers/: E.hs
ReadProblem/: FindFile.hs  Lexer.x  Parser.hs
TPTP/: Binary.hs  ClauseParser.hs  FindFile.hs  Lexer.x  ParseProblem.hs  ParseSnippet.hs  Parsec.hs  Print.hs
attic/: String.hs  Syntax.hs  TPTP.hs
executable/: Main.hs
scripts/: fetch-minisat  find-minisat  gcc-static-minisat  install-minisat  make-tarball
src/Jukebox/: Clausify.hs  Form.hs  GuessModel.hs  HighSat.hs  InferTypes.hs  Map.hs  Name.hs  NameMap.hs  Options.hs  SMTLIB.hs  Sat3.hs  SatEq.hs  Seq.hs  Toolbox.hs  UnionFind.hs  Utils.hs
src/Jukebox/ExternalProvers/: E.hs  SPASS.hs
src/Jukebox/Monotonox/: Monotonicity.hs  ToFOF.hs
src/Jukebox/Provers/: E.hs  SPASS.hs
src/Jukebox/Sat/: Easy.hs  Equality.hs  Minimise.hs  ThreeValued.hs
src/Jukebox/TPTP/: ClauseParser.hs  FindFile.hs  Lexer.x  Parse.hs  ParseProblem.hs  ParseSnippet.hs  Parsec.hs  Print.hs
src/Jukebox/TPTP/Parse/: Core.hs
src/Jukebox/Tools/: AnalyseMonotonicity.hs  Clausify.hs  EncodeTypes.hs  GuessModel.hs  HornToUnit.hs  InferTypes.hs
tests/: exi.p  lists.p  monkeys.p
