Name: jukebox
Version: 0
Cabal-version: >= 1.2
Build-type: Simple

Extra-Source-Files: build scripts/fetch-minisat scripts/install-minisat scripts/gcc-static-minisat

Flag static
  description: Try linking against minisat statically (a hack!)
  default: True

Executable jukebox
  Main-is: Main.hs
  Build-depends: bytestring, base >= 4 && < 5, array, mtl, directory, filepath, bytestring-progress, pretty, hashmap >= 1.2.0.0, hashable, derive, minisat, binary, zlib
  Build-tools: alex
  if flag(static)
    Ghc-options: -pgml scripts/gcc-static-minisat
  Other-modules:
    BinaryShared
    Clausify
    Data.Derive.BinaryShared
    Data.Derive.BinaryUnshared
    Data.Derive.Hashable
    Form
    -- InferTypes
    Monotonox.Monotonicity
    Monotonox.ToFOF
    Name
    NameMap
    Options
    ProgressBar
    Sat
    Seq
    Toolbox
    TPTP.Binary
    TPTP.ClauseParser
    TPTP.FindFile
    TPTP.Lexer
    TPTP.Parsec
    TPTP.ParseProblem
    TPTP.Print
    Utils
